--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="container container-flex">
+    <div class="container-flex container">
       <nav>
           <ul>
                 <li><a href="{{url_for('index')}}">Home</a></li>
