--- a/templates/post.html
+++ b/templates/post.html
@@ -19,6 +19,7 @@
     {{post.content}}
 </div>
 <a href="{{url_for('posts')}}" class="btn btn-outline-secondary btn-sm">Back to Posts</a>
+<a href="{{url_for('delete_post', id=post.id)}}" class="btn btn-outline-danger btn-sm">Delete Post</a>
 
 
 {% endblock %}
